# sequence_similarity_search

./: pyproject.toml  requirements.txt
data/: eqp_vocab.json  example_flows.json  recipe_vocab.json  step_type_vocab.json
scripts/: example_toktenize.py  generate_sample_flows.py
sequence_similarity_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sequence_similarity_search/models/: step_bert.py
sequence_similarity_search/scripts/: build_data.py  generate_sample_flows.py  inspect_flows.py
sequence_similarity_search/tokenization/: tokenizer.py  vocab.py
sequence_similarity_search/training/: dataset.py  train.py
sequence_similarity_search/utils/: flow_utils.py
