[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sequence-similarity-search"
version = "0.1.0"
description = "A BERT-style encoder for step-level similarity in process flows."
authors = [
  { name="David Wilding", email="wilding@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch>=2.0.0",
  "torchvision",
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
  "regex",
  "tqdm",
  "matplotlib",
  "seaborn"
]

[project.optional-dependencies]
jupyter = ["jupyterlab", "ipykernel"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sequence_similarity_search*"]
